fix: position drag hint bottom-right on desktop, inline on mobile

--- a/components/projects/ProjectReelsDeck.module.css
+++ b/components/projects/ProjectReelsDeck.module.css
@@ -1,4 +1,5 @@
 .section {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,6 +43,14 @@
   font-size: 11px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+}
+
+@media (min-width: 768px) {
+  .dragHint {
+    position: absolute;
+    bottom: 32px;
+    right: 36px;
+  }
 }
 
 .dragHintIcon {
